--- a/application/clients/desktop/src/app/project-component/screen-popup/screen-popup.component.html
+++ b/application/clients/desktop/src/app/project-component/screen-popup/screen-popup.component.html
@@ -17,7 +17,7 @@
 
 
 
-<h1 mat-dialog-title>Choose the Screen:</h1>
+<h1 mat-dialog-title class="dialogHeader">Choose the Screen:</h1>
 <div mat-dialog-content>
   <div class="row screenImg">
     <div class="col-md-6 col-sm-6 col-lg-6">
@@ -28,13 +28,44 @@
     <div class="col-md-6 col-sm-6 col-lg-6">
       <!-- <img src="assets/img/MobileIcon.svg" alt="Smiley face" height="150" width="120">
       <input type="radio" name="gender" value="female" (click)="screenType('mobile')"> -->
-      <input id="image2" type="radio" name="radioImage" [(ngModel)]="image2" value="image2"
-        (click)="type('mobile')" />
+      <input id="image2" type="radio" name="radioImage" [(ngModel)]="image2" value="image2" (click)="type('mobile')" />
       <label class="radioButton image2" for="image2"></label>
     </div>
   </div>
+  <br><br>
+  <h1 mat-dialog-title class="dialogHeader">Choose Your Screen Type:</h1>
+  <!-- <div class="row screenImg">
+  <div class="col-md-6 col-sm-6 col-lg-6">
+    <input id="image1" type="radio" name="radioImage" [(ngModel)]="image1" [value]="image1"
+      (click)="type('desktop')" />
+    <label class="radioButton image1" for="image1"></label>
+  </div>
+  <div class="col-md-6 col-sm-6 col-lg-6">
+    <input id="image2" type="radio" name="radioImage" [(ngModel)]="image2" value="image2"
+      (click)="type('mobile')" />
+    <label class="radioButton image2" for="image2"></label>
+  </div>
+</div> -->
+  <!-- <div class="radioClass">
+  <div class="inputGroup customRadio">
+    <input id="radio1" name="radio" type="radio"/>
+    <label for="radio1">Yes</label>
+  </div>
+  <div class="inputGroup customRadio">
+    <input id="radio2" name="radio" type="radio"/>
+    <label for="radio2">No</label>
+  </div>
+</div> -->
+  <div class="radioClass">
+    <input class="myradio" id="radio1" name="radio" type="radio" value="normal" [(ngModel)]="screen.type" />
+    <label for="radio1">normal</label>
+    <input class="myradio" id="radio2" name="radio" type="radio" value="popupmodal" [(ngModel)]="screen.type"/>
+    <label for="radio2">popupModal</label>
+  </div>
+
+
 </div>
 <div mat-dialog-actions class="footerPopup">
   <button mat-raised-button color="warn" (click)="onNoClick()">Cancel</button>
-  <button mat-raised-button color="primary" [mat-dialog-close]="screenType" cdkFocusInitial>Ok</button>
+  <button mat-raised-button color="primary" [mat-dialog-close]="screen" cdkFocusInitial>Ok</button>
 </div>
