--- a/application/clients/desktop/src/app/project-component/screen-popup/screen-popup.component.scss
+++ b/application/clients/desktop/src/app/project-component/screen-popup/screen-popup.component.scss
@@ -1,3 +1,53 @@
+// codepen formatting
+.radioClass {
+ padding: 0 16px;
+ max-width: 550px;
+ margin: 50px auto;
+ font-size: 18px;
+ font-weight: 600;
+ line-height: 36px;
+}
+
+.dialogHeader {
+  font-family: fantasy;
+  font-weight: bold;
+}
+
+
+
+.myradio {
+  appearance:none;
+  margin:0 40px;
+  width: 24px;
+  height: 24px;
+  background: #eeeeee;
+  box-shadow:
+    inset 0 0 0 .4em white,
+    0 0 0 .3em;
+  border-radius: 50%;
+  transition: .2s;
+  cursor:pointer;
+  color: #363945;
+
+  &:hover,
+  &:checked {
+    background: #363945;
+    box-shadow:
+    inset 0 0 0 .6em white,
+    0 0 0 .3em;
+  }
+  
+  &:checked {
+    background: #56be8e;
+    box-shadow:
+      inset 0 0 0 .4em white,
+      0 0 0 .3em #56be8e;
+  } 
+
+  &:focus { outline: 0; }
+}
+
+
 .screenImg {
   text-align: center;
 }
