--- a/application/clients/desktop/src/app/project-component/feature-details/flow-tree/flow-tree.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/flow-tree/flow-tree.component.html
@@ -44,14 +44,14 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <button type="button" class="btn button-create ok_btn" id="update"
+                            <button type="button" class="btn button-create ok_btn" id="update" style=" color: white;"
                                 (click)="addFlows(flow)">Add
                                 Flows</button>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
-                            <button type="button" class="btn button-create ok_btn" id="update"
+                            <button type="button" class="btn button-create ok_btn" id="update" style="color:white; background-color: green;"
                                 (click)="showFlows()">save</button>
                         </div>
                     </div>
