frednamechange to custom connectors

--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -391,7 +391,7 @@
                   <div class="form-group">
                     <label>Key</label>
                     <input type="text" class="form-control" placeholder="Enter key"
-                      [(ngModel)]="quickConnectors.api_key.key" name="api_key.Key" />
+                      [(ngModel)]="api_key" name="api_key" />
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -399,7 +399,7 @@
                   <div class="form-group">
                     <label>Value</label>
                     <input type="text" class="form-control" placeholder="Enter value"
-                      [(ngModel)]="quickConnectors.api_key.value" name="api_key.value" />
+                      [(ngModel)]="api_value" name="api_value" />
                   </div>
                 </div>
               </div>
