--- a/application/clients/desktop/src/app/login/login.component.html
+++ b/application/clients/desktop/src/app/login/login.component.html
@@ -84,8 +84,8 @@
             <div class="col-md-6">
                 <button type="button" class="google-button" (click)='facebooksigin("facebook")'>
                     <span class="google-button__icon">
-                            <a href="#" class="icon-button facebook"><i class="icon-facebook"></i><span></span></a>
-                    </span>
+                        <img style= "width:20px" src="../../assets/img/facebook (1).png">
+                   </span>
                     <span class="google-button__text">FACEBOOK</span>
                 </button>
             </div>
